# alphafusion-issuetracker

./: .dockerignore  .gitignore  Dockerfile  ISSUETRACKER_REVIEW.md  ISSUE_TRACKING_DATA_FLOW.md  ISSUE_TRACKING_FIX_SUMMARY.md  README.md  WORKFLOW_INTEGRATION_STATUS.md  WORKFLOW_INTEGRATION_TEST.md  config_mapping.json  docker-compose.yml  pyproject.toml
apps/web/: __init__.py  __main__.py  api.py  app.py  auth.py  extensions.py  kafka_consumer.py  models.py  oauth.py  routes.py  schemas.py
apps/web/static/css/: issuetracker.css  navigation.css  theme-utilities.css  tradepro-theme.css
apps/web/static/js/: theme-selector.js
apps/web/templates/: 404.html  500.html  backlog.html  backlog_detail.html  base.html  create_backlog.html  create_issue.html  dashboard.html  issue_detail.html  issues.html  landing.html  login.html
apps/web/utils/: __init__.py  firebase_helper.py  provider_factory.py  provider_implementations.py  providers.py  redis_helper.py
docs/: ARCHITECTURE.md  GOOGLE_OAUTH_SETUP.md
scripts/: README.md  copy_credentials.py  entrypoint.sh  test_kafka_firebase_workflow.py
tests/: conftest.py  run_tests.sh
tests/integration/: README.md  __init__.py  test_api_flow.py  test_kafka_firebase_integration.py
tests/unit/: __init__.py  test_api.py  test_auth.py  test_firebase_helper.py  test_models.py  test_schemas.py
